--- a/src/RBCCalendar.css
+++ b/src/RBCCalendar.css
@@ -95,10 +95,12 @@
 
 .timesheet-calendar .rbc-time-header-content {
   border-left: 1px solid #ddd;
+  background: red;
 }
 
 .timesheet-calendar .rbc-time-slot {
   border-top: 1px solid #f0f0f0;
+  margin-top: -20;
 }
 
 .timesheet-calendar .rbc-day-slot .rbc-time-slot {
